--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <title>Magic Eightball</title>
   </head>
-  <body>
+  <body style="background-color:#31313b">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
